5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4326/executions/1621_2918.log
== TEST (2019-04-01 19:10:37) 
-- CODE:
ingresso=float(input("Digite o valor do ingresso"))
promocao=float(input("Digite a quantidade de ingresso"))

print=(round)ingresso=promocao-(promocao/0.2%)

-- ERROR:
File "XXXX", line 4
    print=(round)ingresso=promocao-(promocao/0.2%)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:14:36) 
-- CODE:
precoIngresso=float(input("Digite o valor do ingresso"))
precoPromocional=float(input("Digite a quantidade de ingresso"))
print=round(precopromocional=precoIngresso-(precoIngreco*0.2%/100))




-- EXECUTION TIME:
0.166025
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    print=round(precopromocional=precoIngresso-(precoIngreco*0.2%/100))
                                                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:15:09) 
-- CODE:
precoIngresso=float(input("Digite o valor do ingresso"))
precoPromocional=float(input("Digite a quantidade de ingresso"))
print=round(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))




-- ERROR:
File "XXXX", line 3
    print=round(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:15:12) 
-- CODE:
precoIngresso=float(input("Digite o valor do ingresso"))
precoPromocional=float(input("Digite a quantidade de ingresso"))
print=round(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))




-- EXECUTION TIME:
0.199587
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    print=round(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))
                                                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:15:48) 
-- CODE:
precoIngresso=float(input("Digite o valor do ingresso"))
precoPromocional=float(input("Digite a quantidade de ingresso"))
print=round.2(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))




-- EXECUTION TIME:
0.200602
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    print=round.2(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:16:13) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso"))
precoPromocional=float(input("Digite a quantidade de Ingresso"))
print=round(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))




-- EXECUTION TIME:
0.119675
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    print=round(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))
                                                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:17:02) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso"))
precoPromocional=float(input("Digite a quantidade de Ingresso"))
print=(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))




-- EXECUTION TIME:
0.190211
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    print=(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:17:40) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso"))
precoPromocional=float(input("Digite a quantidade de Ingresso"))
print=round(precoPromocional=precoIngresso-(precoIngreco*20%/100))




-- EXECUTION TIME:
0.182984
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    print=round(precoPromocional=precoIngresso-(precoIngreco*20%/100))
                                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:18:29) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso"))
precoPromocional=float(input("Digite a quantidade de Ingresso"))
print=round(precoPromocional=precoIngresso-(precoIngresso*20%/100))




-- EXECUTION TIME:
0.121693
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    print=round(precoPromocional=precoIngresso-(precoIngresso*20%/100))
                                                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:19:22) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso"))
precoPromocional=float(input("Digite a quantidade de Ingresso"))
print=round(precoPromocional=precoIngresso-(precoIngresso*(20%/100))




-- EXECUTION TIME:
0.209544
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    print=round(precoPromocional=precoIngresso-(precoIngresso*(20%/100))
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:20:20) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso"))
precoPromocional=float(input("Digite a quantidade de Ingresso"))





-- ERROR:
File "XXXX", line 3
    print=round(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:21:19) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))





-- ERROR:
File "XXXX", line 3
    print=round(precoPromocional=precoIngresso-(precoIngreco*0.2%/100))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:25:15) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*20%/100))





-- ERROR:
File "XXXX", line 3
    print=round(precoPromocional=precoIngresso-(presoIngresso*20%/100))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:25:24) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=(precoPromocional=precoIngresso-(presoIngresso*20%/100))





-- ERROR:
File "XXXX", line 3
    print=(precoPromocional=precoIngresso-(presoIngresso*20%/100))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:25:27) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=(precoPromocional=precoIngresso-(presoIngresso*20%/100))





-- EXECUTION TIME:
0.199821
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    print=(precoPromocional=precoIngresso-(presoIngresso*20%/100))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:26:10) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*0.2/100))





-- EXECUTION TIME:
0.203809
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 3, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*0.2/100))
NameError: name 'presoIngresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:28:03) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=(precoIngresso+precoPromocional)





-- EXECUTION TIME:
0.178105
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:

-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:

-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:28:45) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*0.2/2))





-- EXECUTION TIME:
0.220606
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 3, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*0.2/2))
NameError: name 'presoIngresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:28:59) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*0.2/2))





-- EXECUTION TIME:
0.134678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 3, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*0.2/2))
NameError: name 'presoIngresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:30:28) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
deconto=20%
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto))





-- EXECUTION TIME:
0.157015
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    deconto=20%
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:30:35) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
deconto=20%
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.157993
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    deconto=20%
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:30:39) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
deconto=20%
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.135729
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 3
    deconto=20%
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:31:12) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
deconto=(0.2/100)
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.15281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 4, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:31:14) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
deconto=(0.2/100)
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:31:44) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
deconto=(0.2/100)
print=(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.230709
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 4
    print=(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:31:52) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
deconto=(0.2/100)
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.192241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 4, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:31:55) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
deconto=(0.2/100)
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:33:25) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.229536
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 3, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:27) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:33:53) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.167998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 3, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:17) 
-- CODE:
precoIngresso=int(input("Digite o valor do Ingresso:"))
qntd=int(input("Digite a quantidade de Ingresso"))
precoPromocional=int(input("Digite o valor do precoProcional"))
print=round(precoPromocional=precoIngresso-(precoIngresso*0.2*/100))





-- ERROR:
File "XXXX", line 4
    print=round(precoPromocional=precoIngresso-(precoIngresso*0.2*/100))
                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:20) 
-- CODE:
precoIngresso=int(input("Digite o valor do Ingresso:"))
qntd=int(input("Digite a quantidade de Ingresso"))
precoPromocional=int(input("Digite o valor do precoProcional"))
print=round(precoPromocional=precoIngresso-(precoIngresso*0.2*/100))





-- ERROR:
File "XXXX", line 4
    print=round(precoPromocional=precoIngresso-(precoIngresso*0.2*/100))
                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:39) 
-- CODE:
precoIngresso=int(input("Digite o valor do Ingresso:"))

precoPromocional=int(input("Digite o valor do precoProcional"))
print=round(precoPromocional=precoIngresso-(precoIngresso*0.2*/100))





-- ERROR:
File "XXXX", line 4
    print=round(precoPromocional=precoIngresso-(precoIngresso*0.2*/100))
                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:49) 
-- CODE:
precoIngresso=int(input("Digite o valor do Ingresso:"))

precoPromocional=int(input("Digite o valor do precoProcional"))
print=round(precoPromocional=precoIngresso-(precoIngresso*0.2*/100))





-- ERROR:
File "XXXX", line 4
    print=round(precoPromocional=precoIngresso-(precoIngresso*0.2*/100))
                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:06) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))

precoPromocional=float(input("Digite o valor do precoProcional"))
print=round(precoPromocional=precoIngresso-(precoIngresso*0.2*/100))





-- ERROR:
File "XXXX", line 4
    print=round(precoPromocional=precoIngresso-(precoIngresso*0.2*/100))
                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:25) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:54) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*20%/100))





-- ERROR:
File "XXXX", line 3
    print=round(precoPromocional=precoIngresso-(presoIngresso*20%/100))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:59) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*20%/100))





-- ERROR:
File "XXXX", line 3
    print=round(precoPromocional=precoIngresso-(presoIngresso*20%/100))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:40:04) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*20%/100))





-- ERROR:
File "XXXX", line 3
    print=round(precoPromocional=precoIngresso-(presoIngresso*20%/100))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:40) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:52) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:43:29) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=int(input("Digite o valor do desconto:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:09) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:44:37) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.189871
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:38) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:45:19) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/2))





-- EXECUTION TIME:
0.170246
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:20) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/2))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:46:43) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/2))





-- EXECUTION TIME:
0.251038
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:48:48) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))
deconto=(0.2*)
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
File "XXXX", line 4
    deconto=(0.2*)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:48:51) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))
deconto=(0.2*)
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.176442
-- ERROR:
  File "/home/codebench/codes/1621/2918/main.py", line 4
    deconto=(0.2*)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:48:54) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))
deconto=(0.2*)
print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
File "XXXX", line 4
    deconto=(0.2*)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:49:17) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))

print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:49:58) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))

print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:51:48) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))

print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.180445
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:46) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))
desconto=float(input("Digite o valor do desconto:"))

print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:13) 
-- CODE:
precoIngresso=float(input("Digite o valor do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))


print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:54:13) 
-- CODE:
precoIngresso=float(input("Digite o preco do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))


print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.158881
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 5, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:54:15) 
-- CODE:
precoIngresso=float(input("Digite o preco do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))


print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))





-- EXECUTION TIME:
0.202929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 5, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*desconto/100))
NameError: name 'presoIngresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:54:54) 
-- CODE:
precoIngresso=float(input("Digite o preco do Ingresso:"))
precoPromocional=float(input("Digite a quantidade de Ingresso:"))


print=round(precoPromocional=precoIngresso-(presoIngresso*0.2/100))





-- EXECUTION TIME:
0.169416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 5, in <module>
    print=round(precoPromocional=precoIngresso-(presoIngresso*0.2/100))
NameError: name 'presoIngresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
